force-app/main/default/objects/Compensation_Plan__c/Compensation_Plan__c.object-meta.xml
<CustomObject>
    <description>Defines a compensation plan (hourly, piece rate, sales commission, etc.) that can be assigned to users.</description>
    <label>Compensation Plan</label>
    <nameField>
        <label>Compensation Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compensation Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>