force-app/main/default/objects/Compensation_Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Details about what this plan is for and how it should be used.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>