force-app/main/default/objects/Compensation_Plan__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority used when multiple plans could apply (lower number = higher priority, for example).</description>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>